Fixed whitespace issue on right side above 1024px screen widths

--- a/f5_sphinx_theme/static/css/f5-theme.css
+++ b/f5_sphinx_theme/static/css/f5-theme.css
@@ -36,7 +36,6 @@ body {
 
 #content.active {
   margin-left: 6px;
-  width: 100%;
 }
 
 @media (min-width: 1024px) {
@@ -45,16 +44,6 @@ body {
     }
     #content.active {
       margin-left: 256px;
-      padding-right: 20%;
-    }
-}
-
-@media screen and (min-width: 1024px) and (max-width:1200px) {
-    #content {
-      padding-right: 0%;
-    }
-    #content.active {
-      padding-right: 25%;
     }
 }
 
